# Client-Server

./: .gitignore  CMakeLists.txt  README.md  TestTaskClientServer.sln
Client/: CMakeLists.txt  Client.h  Client.vcxproj  Client.vcxproj.filters  Secure.h  client.cpp  main.cpp
NetCommon/: NetCommon.h  TradeRequest.h
Server/: CMakeLists.txt  ClientInfo.h  CompletedTradeRequest.cpp  CompletedTradeRequest.h  DataBase.cpp  DataBase.h  Main.h  Marketplace.cpp  Marketplace.h  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  Session.cpp  Session.h  TradeRequest.h  main.cpp
ServerTests/: CMakeLists.txt  ClientInfoTest.cpp  CompletedTradeRequestTest.cpp  CompletedTradeRequestTest.h  DataBaseTest.cpp  DataBaseTest.h  MarketplaceTest.cpp  MarketplaceTest.h  ServerTests.vcxproj  ServerTests.vcxproj.filters  SessionTest.cpp  SessionTest.h  Source.cpp  TestEnvironment.h  TradeRequestTest.cpp  TradeRequestTest.h
